--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,23 @@ dependencies:
   badges: ^2.0.3
   menu_button: ^1.4.2+1
   time: "^2.1.3"
-  http: ^0.12.0+2
+  http: ^0.13.3
   retry: ^3.1.0
   universal_io: ^2.0.4
+  firebase_auth: ^4.2.4
+  firebase_core: ^2.4.1
+  firebase_core_web: any
+  cloud_firestore: ^4.3.1
+  firebase_database: ^10.0.9
+  awesome_dialog: ^3.0.1
+  splash_screen_view: ^3.0.0
+  firebase_core_platform_interface: 4.5.2
+  firebase_messaging: ^14.2.1
+  package_info:
+  url_launcher:
+  flutter_svg:
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -69,6 +83,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - logo_appthuepin.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
